--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ Discount:
 </select></label>
 <br>
 </fieldset><br>
-<div align="center">
+<div align="center" style="margin-bottom:50">
 <input type="submit" value="Submit" onclick="setGameConfig();">
 </div>
 </div><br>
