--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ function loadDQNN() {
  </script>
 </head>
 <body onload="createPlot();">
-<div id="controlElements" style="position:absolute;top:10;left:750;">
+<div id="controlElements" style="position:absolute;top:10;left:750;margin-bottom:auto">
 <h3 align="center">Settings</h3>
 <fieldset>
 <legend>Trained DQN Network</legend>
@@ -549,7 +549,7 @@ Discount:
 </select></label>
 <br>
 </fieldset><br>
-<div align="center" style="margin-bottom:50">
+<div align="center">
 <input type="submit" value="Submit" onclick="setGameConfig();">
 </div>
 </div><br>
