--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ function loadDQNN() {
  </script>
 </head>
 <body onload="createPlot();">
-<div id="controlElements" style="position:absolute;top:10;left:750;margin-bottom:auto">
+<div id="controlElements" style="position:absolute;top:10;left:750;margin-bottom:300px">
 <h3 align="center">Settings</h3>
 <fieldset>
 <legend>Trained DQN Network</legend>
