--- a/index.html
+++ b/index.html
@@ -322,13 +322,13 @@ class Agent {
 			textSize(fontsize)
 			fill(255)
 			if(this.centerX >= width - agentWidth / 2)
-				text("Shit: -1", this.centerX - agentWidth/2, this.centerY)
+				text("Autsch: -1", this.centerX - agentWidth/2, this.centerY)
 			else if(this.centerX  <= agentWidth / 2)
-				text("Shit: -1", this.centerX + agentWidth/2, this.centerY)
+				text("Autsch: -1", this.centerX + agentWidth/2, this.centerY)
 			else if(this.centerY >= height - agentHeight /2)
-				text("Shit: -1", this.centerX, this.centerY - agentHeight/2)
+				text("Autsch: -1", this.centerX, this.centerY - agentHeight/2)
 			else if(this.centerY <= agentHeight /2)
-				text("Shit: -1", this.centerX, this.centerY + agentHeight/2)
+				text("Autsch: -1", this.centerX, this.centerY + agentHeight/2)
 				
 		}
 		redBalls.forEach((ball) => {
