--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ class Agent {
 			}
 			
 		})
-		for(let i = 0; i < ballIndexes; i++) {
+		for(let i = 0; i < ballIndexes.length; i++) {
 			redBalls.remove(ballIndexes[i])
 		}
 		ballIndexes.length = 0
@@ -421,7 +421,7 @@ class Agent {
 			}
 			
 		})
-		for(let i = 0; i < ballIndexes; i++) {
+		for(let i = 0; i < ballIndexes.length; i++) {
 			greenBalls.remove(ballIndexes[i])
 		}
 		
