--- a/index.html
+++ b/index.html
@@ -354,7 +354,6 @@ class Agent {
 				
 		}
 		
-		let ballIndexes = []
 		redBalls.forEach((ball) => {
 			let dist = this.euklideanDistance(ball)
 			let angle = this.getRelativeAngle(ball)
@@ -376,7 +375,8 @@ class Agent {
 				text("Good: +1", this.centerX, this.centerY - 50)
 				ball.x = random(minX, maxX)
 				if(!training) {
-					ballIndexes.push(ball)
+					delete ball
+		
 				} else {
 					if(moving)
 						ball.y = minY
@@ -386,10 +386,8 @@ class Agent {
 			}
 			
 		})
-		for(let i = 0; i < ballIndexes.length; i++) {
-			redBalls.remove(ballIndexes[i])
-		}
-		ballIndexes.length = 0
+		
+	
 		greenBalls.forEach((ball) => {
 			let dist = this.euklideanDistance(ball)
 			let angle = this.getRelativeAngle(ball)
@@ -411,7 +409,7 @@ class Agent {
 				text("Shit: -1", this.centerX, this.centerY - 50)
 				ball.x = random(minX, maxX)
 				if(!training) {
-					ballIndexes.push(ball)
+					delete ball
 				} else {
 					if(moving)
 						ball.y = minY
@@ -421,11 +419,7 @@ class Agent {
 			}
 			
 		})
-		for(let i = 0; i < ballIndexes.length; i++) {
-			greenBalls.remove(ballIndexes[i])
-		}
 		
-		ballIndexes.length = 0
 		if(!collide) {
 			zero += 1
 			plotSuccess(0)
