--- a/index.html
+++ b/index.html
@@ -610,14 +610,14 @@ Discount:
 </div>
 </div><br>
 
-<div style="position:absolute;margin-top:525;width:100%">
-<div style="position:absolute;left:200">
+<div style="position:absolute;margin-top:555;width:100%;">
+<div style="position:absolute;left:200;">
 <input type="submit" value="Start Game" onclick="startGame();">
 <input type="submit" value="Stop Game" onclick="stopGame();">
 <input type="submit" value="Save JSON" onclick="storeJSON();">
 </div>
 <br><br><br>
-<div id="histo" style="width: 50%; height: 300px; float: left"></div>
+<div id="histo" style="width: 50%; height: 300px; float: left;"></div>
 <div id="stats" style="width: 50%; height: 300px; float: right;"></div>
 </div>	
 </body>
