--- a/index.html
+++ b/index.html
@@ -114,15 +114,13 @@ let training = true
 		
 		env.getNumStates = function() { return (numGreenBalls * 3 + numRedBalls * 3) + 2; }
 		env.getMaxNumActions = function() { return actions.length; }
-		
-		if (document.getElementById('no').checked) {
-			storeJSON()
-		} 
 		rlagent = new RL.DQNAgent(env, spec);
-		let pol = loadDQNN()
+		if (document.getElementById('yes').checked) {
+			let pol = loadDQNN()
 			if(pol !== undefined && pol !== null)
 				rlagent.fromJSON(pol)
-			agent.rlagent = rlagent
+		}
+		agent.rlagent = rlagent
 		
 	}
 
@@ -542,7 +540,7 @@ function plotSuccess(reward) {
 
 function storeJSON() {
 	let file = rlagent.toJSON()
-	window.localStorage.setItem('json', JSON.stringify(file), null, 2);	
+	window.localStorage.setItem('json', JSON.stringify(file, null, 2));	
 }
 
 function loadDQNN() {
