--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ let frameSize = 30
 let fieldColor = 0
 let white = false
 let training = true
-let state = undefined
+let state = null
 
 	function getRandomInt(min, max) {
 	  min = Math.ceil(min);
