--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ class Agent {
 	}*/
 	
 	act() {
-	let action undefined
+	let action = undefined
 	if(this.currentState == undefined) {
 		if(training) {
 			const {reward, state} = this.checkCollision()
