--- a/index.html
+++ b/index.html
@@ -116,12 +116,8 @@ let training = true
 			gamma = parseFloat(document.getElementById("gamma").value)
 			spec["gamma"] = gamma
 		}
-		if(training) {
-			env.getNumStates = function() { return (numGreenBalls * 3 + numRedBalls * 3) + 2; }
-		} else {
-			env.getNumStates = function() { return 5}
-		}
-		env.getMaxNumActions = function() { return actions.length; }
+		//env.getNumStates = function() { return 8 * 5}
+		//env.getMaxNumActions = function() { return actions.length; }
 		if (document.getElementById('yes').checked) {
 			let pol = loadDQNN()
 			if(pol != undefined && pol != null)
@@ -213,11 +209,7 @@ let training = true
 	
 function preload() {
 	actions = [moveUp, moveDown, moveLeft, moveRight, moveRightUp, moveRightDown, moveLeftUp, moveLeftDown]
-	if(training) {
-		env.getNumStates = function() { return (numGreenBalls * 3 + numRedBalls * 3) + 2; }
-	} else {
-		env.getNumStates = function() { return 5 }
-	}
+	env.getNumStates = function() { return 8 * 5}
 	env.getMaxNumActions = function() { return actions.length; }
 	spec["alpha"] = learnRate
 	spec["epsilon"] = greedy
@@ -265,7 +257,6 @@ function draw() {
   
   agent.act()
   iteration += 1
-  //displayAgentCenter(agent)
   
   let angle = undefined
   if(prevAngle.angle !== undefined) {
@@ -523,12 +514,18 @@ class Agent {
 		this.score += numGood - numBad
 		text("Score: "+this.score, 125, 50)
 		sensors.forEach((sensor) => {
-			state.concat(sensor)
+			if(state.length == 5)
+				state.concat(sensor)
+			else {
+				for(let j = 0; j < 5; j++) {
+					state.push(0)
+				}
+			}
 		})
 		return {reward: numGood - numBad, state: state}
 }
 	
-	checkCollision() {
+	/*checkCollision() {
 		let state = []
 		let collide = false
 		state.push(this.centerX)
@@ -623,9 +620,9 @@ class Agent {
 		this.score += numGood - numBad
 		text("Score: "+this.score, 125, 50)
 		return {reward: numGood - numBad, state: state}
-	}
+	} */
 	
-	checkCollisionForCompeteMode() {
+	/*checkCollisionForCompeteMode() {
 		let state = []
 		let collide = false
 		state.push(this.centerX)
@@ -743,7 +740,7 @@ class Agent {
 		text("Score: "+this.score, 125, 50)
 		return {reward: numGood - numBad, state: state}
 		
-	}
+	} */
 	
 	/* act() {
 		let action = undefined
@@ -778,36 +775,20 @@ class Agent {
 	act() {
 	let action = undefined
 	if(this.currentState == undefined) {
-		if(training) {
-			const {reward, state} = this.checkCollision()
-			action = this.rlagent.act(state)
-			this.performedAction = this.actions[action].name
-			this.actions[action](this)
-			this.currentState = state
-			this.rlagent.learn(reward)
+		const {reward, state} = this.checkCollisionBySensors()
+		action = this.rlagent.act(state)
+		this.performedAction = this.actions[action].name
+		this.actions[action](this)
+		this.currentState = state
+		this.rlagent.learn(reward)
 			
-		} else {
-			const {reward, state} = this.checkCollisionForCompeteMode()
-			action = this.rlagent.act(state)
-			this.performedAction = this.actions[action].name
-			this.actions[action](this)
-			this.currentState = state
-			this.rlagent.learn(reward)
-		}
 	} else {
 		action = this.rlagent.act(this.currentState)
 		this.performedAction = this.actions[action].name
 		this.actions[action](this)
-		if(training) {
-			const {reward, state} = this.checkCollision()
-			this.currentState = state
-			this.rlagent.learn(reward)
-		} else {
-			const {reward, state} = this.checkCollisionForCompeteMode()
-			this.currentState = state
-			this.rlagent.learn(reward)
-		}
-		
+		const {reward, state} = this.checkCollisionBySensors()
+		this.currentState = state
+		this.rlagent.learn(reward)
 	}
 }
 	
